#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(helloworld, 0.0.1, devasena.prasad@gmail.com)

AM_INIT_AUTOMAKE ## Automake is used
AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_RANLIB ### Needed to build a library

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([lib/Makefile src/Makefile Makefile]) #Create Makefile
AC_CONFIG_SUBDIRS([SUBDIR1])

AM_INIT_AUTOMAKE
AC_OUTPUT
